--- a/Mod3_lab2.ipynb
+++ b/Mod3_lab2.ipynb
@@ -602,10 +602,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2hXZP4wXqtmK",
-        "outputId": "12dcf048-9457-44bc-e977-50e58b08b5d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "12dcf048-9457-44bc-e977-50e58b08b5d4"
       },
       "source": [
         "## TASK\n",
@@ -1004,12 +1004,12 @@
         "decision_boundary_plot_pca(x_pts, y_pts, 7)\n"
       ],
       "metadata": {
-        "id": "tC9Dsinel21i",
-        "outputId": "2c96d0a0-e4a3-44c6-9854-d43b1c63e25e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "tC9Dsinel21i",
+        "outputId": "2c96d0a0-e4a3-44c6-9854-d43b1c63e25e"
       },
       "execution_count": 19,
       "outputs": [
@@ -2576,12 +2576,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "FNEMesvSntup",
-        "outputId": "23f88596-d203-41d0-fe80-f17ffdaf2b2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "FNEMesvSntup",
+        "outputId": "23f88596-d203-41d0-fe80-f17ffdaf2b2d"
       },
       "execution_count": 31,
       "outputs": [
@@ -2624,11 +2624,11 @@
         "print(\"Classification Report for Car Evaluation Dataset:\\n\", classification_rep)\n"
       ],
       "metadata": {
-        "id": "V8gufME8n1oP",
-        "outputId": "8a916d81-33ce-456f-d174-d61da9b4a698",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V8gufME8n1oP",
+        "outputId": "8a916d81-33ce-456f-d174-d61da9b4a698"
       },
       "execution_count": 32,
       "outputs": [
@@ -2662,6 +2662,32 @@
         "1. In the section on Decision boundaries, you must have seen that we ran the KNN algorithm twice: first with the _weights_ set to 'uniform' and then set to 'distance'. Find out the difference between these two.  \n",
         "2. What do you think could be the drawbacks of using KNN ?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Difference between 'uniform' and 'distance' in KNN:\n",
+        "   In KNN, the 'uniform' option assigns equal weights to all neighbors when making a prediction. This means that each neighbor contributes equally to the decision, regardless of its distance from the query point.\n",
+        "   On the other hand, the 'distance' option assigns weights to neighbors based on their distance from the query point. Closer neighbors have more influence on the prediction, while farther neighbors have less influence. This implies that the algorithm considers the inverse of the distance as the weight.\n",
+        "\n",
+        "2. Drawbacks of KNN:\n",
+        "   Computational Complexity: KNN can be computationally expensive, especially as the size of the dataset increases. This is because, during prediction, the algorithm needs to calculate the distances between the query point and all data points in the training set.\n",
+        "   Sensitivity to Outliers: KNN is sensitive to outliers in the data. Outliers can disproportionately affect the decision boundaries and lead to incorrect predictions.\n",
+        "   Need for Feature Scaling: KNN is sensitive to the scale of features. Features with larger scales can dominate the distance calculations, leading to biased predictions. Therefore, it's often necessary to scale the features before applying KNN.\n",
+        "   Curse of Dimensionality: In high-dimensional spaces, the concept of distance becomes less meaningful as all points tend to be far away from each other. This can result in a degradation of KNN's performance in high-dimensional datasets.\n",
+        "\n",
+        "Understanding these aspects is crucial when deciding whether KNN is an appropriate algorithm for a given task and dataset."
+      ],
+      "metadata": {
+        "id": "omFf2Ep3oYqy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "rqsKwbjToOSP"
+      }
     },
     {
       "cell_type": "markdown",
